# ModTerm

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: appimage.yml  windows-exe.yml
packaging/: AppRun  modterm-windows.spec  modterm.desktop  modterm.spec  render_icon.py  render_windows_assets.py
scripts/: build_appimage.sh  build_windows.bat  build_windows.ps1
src/modterm/: __init__.py  __main__.py  app.py
src/modterm/core/: __init__.py  checksums.py  i18n.py  modbus.py  models.py  parsers.py  serial_models.py
src/modterm/services/: log_service.py  persistence.py  serial_service.py
src/modterm/ui/: command_panel.py  log_panel.py  main_window.py  serial_panel.py  styles.py  terminal_pages.py
tests/: __init__.py  test_checksums.py  test_custom_packet.py  test_gui_smoke.py  test_modbus.py  test_parsers.py  test_persistence.py  test_serial_models.py  test_serial_runtime.py  test_serial_service.py  test_windows_assets.py
